--- a/bot.yml
+++ b/bot.yml
@@ -1,4 +1,4 @@
-name: one_night_test
+name: onw
 description: A simple node.js starter bot for Beep Boop
 avatar: resources/avatar.png
 #background: resources/background.png
